Add financial data services, API configuration, and caching support; implement market data retrieval from Alpha Vantage and Twelve Data APIs

--- a/phynance/backend-spring/pom.xml
+++ b/phynance/backend-spring/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.2.0-jre</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
