--- a/phynance/frontend/package.json
+++ b/phynance/frontend/package.json
@@ -7,7 +7,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,md}'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.2.0",
@@ -32,11 +35,18 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.62",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "react-scripts": "^5.0.1",
+    "ts-jest": "^29.4.0",
     "typescript": "^4.9.5"
   },
   "eslintConfig": {
