--- a/phynance/backend-spring/pom.xml
+++ b/phynance/backend-spring/pom.xml
@@ -47,6 +47,15 @@
             <artifactId>guava</artifactId>
             <version>33.2.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
