Implement MarketData entity and update related services and controllers to use it; enhance caching with Redis and add partitioning strategy for market data in migration script.

--- a/phynance/backend-spring/src/main/resources/application.properties
+++ b/phynance/backend-spring/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.datasource.password=
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true 
+spring.h2.console.enabled=true
+
+# Redis configuration for caching
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379 
